# sway_command

./: .rustfmt.toml  Cargo.toml  README.md
src/: criteria.rs  lib.rs
src/commands/: config.rs  font.rs  mod.rs  runtime.rs  standalone.rs
