[package]
name = "sway_command"
version = "0.1.1"
edition = "2021"
categories = []
description = "Typesafe sway/i3 commands"
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/sway_command"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
serde = { version = "1.0.147", optional = true, features = ["derive"] }
vec1 = "1.10.1"

[features]
default = ["serde"]

[dev-dependencies]
swayipc = "3.0.1"
